--- a/style/media.css
+++ b/style/media.css
@@ -11,3 +11,8 @@ img.divider {
     width: 100%;
     max-width: var(--max-width);
 }
+
+video.std {
+    width: 100%;
+    max-width: var(--max-width);
+}
