removing root html

--- a/html/partial/footer.html
+++ b/html/partial/footer.html
@@ -8,11 +8,13 @@
         <button>Print and Play</button>
 
         <!-- Video Thumbnails -->
-        <div class="collapsed" id="video_thumbnails">
-            <a href="landing.html"><img class="thumbnail" src="media/landing_thumbnail.png"></a>
-            <a href="empire.html"><img class="thumbnail" src="media/empire_thumbnail.png"></a>
-            <a href="nowait.html"><img class="thumbnail" src="media/nowait_thumbnail.png"></a>
-            <a href="constructed.html"><img class="thumbnail" src="media/constructed_thumbnail.png"></a>
+        <div class="padding">
+            <div class="collapsed" id="video_thumbnails">
+                <a href="landing.html"><img class="thumbnail" src="media/landing_thumbnail.png"></a>
+                <a href="empire.html"><img class="thumbnail" src="media/empire_thumbnail.png"></a>
+                <a href="nowait.html"><img class="thumbnail" src="media/nowait_thumbnail.png"></a>
+                <a href="constructed.html"><img class="thumbnail" src="media/constructed_thumbnail.png"></a>
+            </div>
         </div>
 
         <!-- Sign-Up Text -->
