empire video page

--- a/html/partial/footer.html
+++ b/html/partial/footer.html
@@ -1,5 +1,6 @@
+<!-- Footer -->
 <div class="centered">
-    <div class="no-show" id="footer">
+    <div class="header_footer" id="footer">
 
         <!-- Buttons -->
         <button id="video_button">Watch More Videos</button>
@@ -10,7 +11,7 @@
         <!-- Video Thumbnails -->
         <div class="padding">
             <div class="collapsed" id="video_thumbnails">
-                <a href="landing.html"><img class="thumbnail" src="media/landing_thumbnail.png"></a>
+                <a href="home.html"><img class="thumbnail" src="media/landing_thumbnail.png"></a>
                 <a href="empire.html"><img class="thumbnail" src="media/empire_thumbnail.png"></a>
                 <a href="nowait.html"><img class="thumbnail" src="media/nowait_thumbnail.png"></a>
                 <a href="constructed.html"><img class="thumbnail" src="media/constructed_thumbnail.png"></a>
@@ -25,3 +26,6 @@
         <img src="media/divider.png" class="divider">
     </div>
 </div>
+
+<!-- Scripts -->
+<script type="text/javascript" src="script/footer.js"></script>
