--- a/html/partial/header.html
+++ b/html/partial/header.html
@@ -1,5 +1,5 @@
 <div class="centered">
-    <div class="no-show" id="header">
+    <div class="header_footer" id="header">
         <img src="media/logo.png" class="logo">
     </div>
 </div>
