--- a/style/page.css
+++ b/style/page.css
@@ -15,6 +15,7 @@ div.centered {
 div.stacked-parent {
     position: relative;
     top: 0px;
+    max-width: var(--max-width);
 }
 
 div.stacked {
@@ -27,8 +28,8 @@ div.padding {
     margin-bottom: 25px;
 }
 
-div.no-show {
-    opacity: 0;
+div.header_footer {
+    opacity: 1;
 }
 
 .collapsed {
