--- a/html/partial/include.html
+++ b/html/partial/include.html
@@ -14,3 +14,6 @@
 
 <!-- Meta -->
 <meta name="theme-color" content="#000000">
+
+<!-- Scripts -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
