thumbnails for reading/pnp

--- a/html/partial/footer.html
+++ b/html/partial/footer.html
@@ -5,8 +5,8 @@
         <!-- Buttons -->
         <button id="video_button">Watch More Videos</button>
         <button>Play The Online Demo</button>
-        <button>Read More</button>
-        <button>Print and Play</button>
+        <button id="read_button">Read More</button>
+        <button id="pnp_button">Print and Play</button>
 
         <!-- Video Thumbnails -->
         <div class="padding">
@@ -15,6 +15,30 @@
                 <a href="empire.html"><img class="thumbnail" src="media/empire_thumbnail.png"></a>
                 <a href="nowait.html"><img class="thumbnail" src="media/nowait_thumbnail.png"></a>
                 <a href="constructed.html"><img class="thumbnail" src="media/constructed_thumbnail.png"></a>
+            </div>
+        </div>
+
+        <!-- Reading Thumbnails -->
+        <div class="padding">
+            <div class="collapsed" id="read_thumbnails">
+                <a href="gameplay.html"><img class="thumbnail" src="media/gameplay_thumbnail.png"></a>
+                <a href="empire-text.html"><img class="thumbnail" src="media/empire_thumbnail.png"></a>
+                <a href="nowait-text.html"><img class="thumbnail" src="media/nowait_thumbnail.png"></a>
+                <a href="constructed-text.html"><img class="thumbnail" src="media/constructed_thumbnail.png"></a>
+                <a href="nowait-text.html"><img class="thumbnail" src="media/learn_thumbnail.png"></a>
+                <a href="constructed-text.html"><img class="thumbnail" src="media/comprehensive_thumbnail.png"></a>
+            </div>
+        </div>
+
+        <!-- PnP -->
+        <div class="padding">
+            <div class="collapsed" id="pnp_thumbnails">
+                <a rel="noreferrer noopener" target="_blank" href="docs/Print Instructions.pdf"><img class="thumbnail" src="media/printing_thumbnail.png"></a>
+                <a rel="noreferrer noopener" target="_blank" href="docs/Elemental Cards.pdf"><img class="thumbnail" src="media/elemental_thumbnail.png"></a>
+                <a rel="noreferrer noopener" target="_blank" href="docs/Player Cards.pdf"><img class="thumbnail" src="media/player_thumbnail.png"></a>
+                <a rel="noreferrer noopener" target="_blank" href="docs/Subversions.pdf"><img class="thumbnail" src="media/subversions_thumbnail.png"></a>
+                <a rel="noreferrer noopener" target="_blank" href="docs/Learn to Play (Digital).pdf"><img class="thumbnail" src="media/learn_thumbnail.png"></a>
+                <a rel="noreferrer noopener" target="_blank" href="docs/Comprehensive Rules (Digital).pdf"><img class="thumbnail" src="media/comprehensive_thumbnail.png"></a>
             </div>
         </div>
 
