removing .html from webpage names

--- a/html/partial/footer.html
+++ b/html/partial/footer.html
@@ -11,22 +11,22 @@
         <!-- Video Thumbnails -->
         <div class="padding">
             <div class="collapsed" id="video_thumbnails">
-                <a href="home.html"><img class="thumbnail" src="media/landing_thumbnail.png"></a>
-                <a href="empire.html"><img class="thumbnail" src="media/empire_thumbnail.png"></a>
-                <a href="nowait.html"><img class="thumbnail" src="media/nowait_thumbnail.png"></a>
-                <a href="constructed.html"><img class="thumbnail" src="media/constructed_thumbnail.png"></a>
+                <a href="home"><img class="thumbnail" src="media/landing_thumbnail.png"></a>
+                <a href="empire"><img class="thumbnail" src="media/empire_thumbnail.png"></a>
+                <a href="nowait"><img class="thumbnail" src="media/nowait_thumbnail.png"></a>
+                <a href="constructed"><img class="thumbnail" src="media/constructed_thumbnail.png"></a>
             </div>
         </div>
 
         <!-- Reading Thumbnails -->
         <div class="padding">
             <div class="collapsed" id="read_thumbnails">
-                <a href="gameplay.html"><img class="thumbnail" src="media/gameplay_thumbnail.png"></a>
-                <a href="empire-text.html"><img class="thumbnail" src="media/empire_thumbnail.png"></a>
-                <a href="nowait-text.html"><img class="thumbnail" src="media/nowait_thumbnail.png"></a>
-                <a href="constructed-text.html"><img class="thumbnail" src="media/constructed_thumbnail.png"></a>
-                <a href="nowait-text.html"><img class="thumbnail" src="media/learn_thumbnail.png"></a>
-                <a href="constructed-text.html"><img class="thumbnail" src="media/comprehensive_thumbnail.png"></a>
+                <a href="gameplay"><img class="thumbnail" src="media/gameplay_thumbnail.png"></a>
+                <a href="empire-text"><img class="thumbnail" src="media/empire_thumbnail.png"></a>
+                <a href="nowait-text"><img class="thumbnail" src="media/nowait_thumbnail.png"></a>
+                <a href="constructed-text"><img class="thumbnail" src="media/constructed_thumbnail.png"></a>
+                <a href="nowait-text"><img class="thumbnail" src="media/learn_thumbnail.png"></a>
+                <a href="constructed-text"><img class="thumbnail" src="media/comprehensive_thumbnail.png"></a>
             </div>
         </div>
 
