online demo as live link

--- a/html/partial/footer.html
+++ b/html/partial/footer.html
@@ -4,7 +4,7 @@
 
         <!-- Buttons -->
         <button id="video_button">Watch More Videos</button>
-        <button>Play The Online Demo</button>
+        <a href="online"><button>Play The Online Demo</button></a>
         <button id="read_button">Read More</button>
         <button id="pnp_button">Print and Play</button>
 
