--- a/html/partial/footer.html
+++ b/html/partial/footer.html
@@ -46,6 +46,20 @@
         <p class="h1"><span class="ks">Coming to Kickstarter:</span> Sign up to get notified about our launch!</p>
         <p class="p1">We'll send one update each month. Opt-out at any time.</p>
 
+        <!-- Sign-Up Form -->
+        <div id="subscribe_form">
+            <input type="text" name="email" id="subscribe_email" placeholder="Email">
+            <button id="subscribe_button" class="subscribe">Submit</button>
+        </div>
+        <div id="subscribe_success_box" class="collapsed">
+            <div class="centered">
+                <p class="h2" id="subscribe_success_message">
+                    Thanks!
+                    You'll be the first to know when we decide to launch.
+                </p>
+            </div>
+        </div>
+
         <!-- Divider -->
         <img src="media/divider.png" class="divider">
     </div>
