--- a/html/partial/include.html
+++ b/html/partial/include.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="style/page.css" />
 <link rel="stylesheet" type="text/css" href="style/font.css" />
 <link rel="stylesheet" type="text/css" href="style/media.css" />
-<link rel="stylesheet" type="text/css" href="style/buttons.css" />
+<link rel="stylesheet" type="text/css" href="style/input.css" />
 
 <!-- Meta -->
 <meta name="theme-color" content="#000000">
