adding feedback form

--- a/html/partial/footer.html
+++ b/html/partial/footer.html
@@ -52,12 +52,21 @@
             <button id="subscribe_button" class="subscribe">Submit</button>
         </div>
         <div id="subscribe_success_box" class="collapsed">
-            <div class="centered">
-                <p class="h2" id="subscribe_success_message">
-                    Thanks!
-                    You'll be the first to know when we decide to launch.
-                </p>
-            </div>
+            <p class="h2" id="subscribe_success_message">
+                Thanks!
+                You'll be the first to know when we decide to launch.
+            </p>
+        </div>
+
+        <!-- Questions-Comments -->
+        <p class="p1" id="questions_prompt">
+            Questions? Comments?
+            <span class="link" id="questions_link">Leave us a message!</span>
+        </p>
+        <div id="questions_form" class="collapsed">
+            <textarea name="questions_box" rows="5" id="questions_box" placeholder="Type your questions or comments here!"></textarea>
+            <input type="text" name="questions_email" id="questions_email" placeholder="Email (Optional)">
+            <button id="questions_button" class="subscribe">Submit</button>
         </div>
 
         <!-- Divider -->
