filling out footer

--- a/html/partial/footer.html
+++ b/html/partial/footer.html
@@ -71,6 +71,18 @@
 
         <!-- Divider -->
         <img src="media/divider.png" class="divider">
+
+        <!-- Credits -->
+        <div class="centered credits">
+            <p class="p1 bgcolor">Privacy Policy</p>
+            <p class="p1 bgcolor">Version 0.8.0 (Gothic 0)</p>
+            <p class="p1 bgcolor">
+                Copyright &copy; 2018-2021 Lake's Legendaries LLC. All rights reserved.
+            </p>
+            <p class="p1 justified bgcolor">
+                Source code for the online demo is available on GitHub: Code & Assets. Game design, graphic design, rulebook design, app (online demo) design, 2D/3D animation, video editing, & website design by Mike Powell. Character art by LFORCE-ANON, Sara Contreras, Inklev, Draco Herrera, José Muñoz, Mr-Ripley, and 4steex. Promo video music by Komiku, AirWolf89, Jedo, and Kris Klavenes, used under the CC0 1.0 and CC BY 3.0 licenses. No changes were made to the music tracks, outside of cutting them to the appropriate length and changing their volumes for fade-in and fade-out effects.
+            </p>
+        </div>
     </div>
 </div>
 
