--- a/html/partial/footer.html
+++ b/html/partial/footer.html
@@ -74,13 +74,29 @@
 
         <!-- Credits -->
         <div class="centered credits">
-            <p class="p1 bgcolor">Privacy Policy</p>
-            <p class="p1 bgcolor">Version 0.8.0 (Gothic 0)</p>
-            <p class="p1 bgcolor">
-                Copyright &copy; 2018-2021 Lake's Legendaries LLC. All rights reserved.
+            <p class="p2 bgcolor"><a href="privacy" class="link p2 bgcolor">Privacy Policy</a></p>
+            <p class="p2 bgcolor">Version 0.8.0 (Gothic 0)</p>
+            <p class="p2 bgcolor">
+                Copyright &copy; 2018-2022 Lake's Legendaries LLC. All rights reserved.
             </p>
-            <p class="p1 justified bgcolor">
-                Source code for the online demo is available on GitHub: Code & Assets. Game design, graphic design, rulebook design, app (online demo) design, 2D/3D animation, video editing, & website design by Mike Powell. Character art by LFORCE-ANON, Sara Contreras, Inklev, Draco Herrera, José Muñoz, Mr-Ripley, and 4steex. Promo video music by Komiku, AirWolf89, Jedo, and Kris Klavenes, used under the CC0 1.0 and CC BY 3.0 licenses. No changes were made to the music tracks, outside of cutting them to the appropriate length and changing their volumes for fade-in and fade-out effects.
+            <p class="p2 justified bgcolor">
+                Source code for the online demo is available on <a href="https://github.com/lakes-legendaries/" class="link p2 bgcolor">GitHub</a>. Game design, graphic design, rulebook design, app (online demo) design, 2D/3D animation, video editing, & website design by Mike Powell. Character art by
+                <a href="https://www.deviantart.com/creadfectus" class="link p2 bgcolor">CREADFECTUS</a>,
+                <a href="https://www.deviantart.com/yunaxd" class="link p2 bgcolor">Sara Contreras</a>,
+                <a href="https://www.deviantart.com/inklev" class="link p2 bgcolor">Inklev</a>,
+                <a href="https://www.deviantart.com/chaos-draco" class="link p2 bgcolor">Draco Herrera</a>,
+                <a href="https://www.deviantart.com/metalratrox/" class="link p2 bgcolor">Jos&eacute; Mu&ntilde;oz</a>,
+                <a href="https://www.deviantart.com/mr-ripley" class="link p2 bgcolor">Mr-Ripley</a>, and
+                <a href="https://www.deviantart.com/4steex" class="link p2 bgcolor">4steex</a>.
+                Promo video music by
+                <a href="https://freemusicarchive.org/music/Komiku" class="link p2 bgcolor">Komiku</a>,
+                <a href="https://freesound.org/people/Airwolf89/" class="link p2 bgcolor">AirWolf89</a>,
+                <a href="https://freesound.org/people/Jedo/" class="link p2 bgcolor">Jedo</a>, and
+                <a href="https://freesound.org/people/klavo1985/" class="link p2 bgcolor">Kris Klavenes</a>,
+                used under the
+                <a href="https://creativecommons.org/publicdomain/zero/1.0/legalcode" class="link p2 bgcolor">CC0 1.0</a> and
+                <a href="https://creativecommons.org/licenses/by/3.0/legalcode" class="link p2 bgcolor">CC BY 3.0</a>
+                licenses. No changes were made to the music tracks, outside of cutting them to the appropriate length and changing their volumes for fade-in and fade-out effects.
             </p>
         </div>
     </div>
