--- a/style/media.css
+++ b/style/media.css
@@ -1,3 +1,13 @@
+:root {
+    --partial-img-width: 67%
+}
+
+@media (pointer:none), (pointer:coarse) {
+    :root {
+        --partial-img-width: 100%
+    }
+}
+
 img.logo {
     top: 0px;
     margin-left: auto;
@@ -19,4 +29,14 @@ img.thumbnail {
 img.std, video.std {
     width: 100%;
     max-width: var(--max-width);
+}
+
+img.partial, img.full {
+    width: var(--partial-img-width);
+    max-width: var(--max-width);
+    margin: 25px;
+}
+
+img.full {
+    width: 95%;
 }
