--- a/html/partial/footer.html
+++ b/html/partial/footer.html
@@ -11,7 +11,7 @@
         <!-- Video Thumbnails -->
         <div class="padding">
             <div class="collapsed" id="video_thumbnails">
-                <a href="home"><img class="thumbnail" src="media/landing_thumbnail.png"></a>
+                <a href="landing"><img class="thumbnail" src="media/landing_thumbnail.png"></a>
                 <a href="empire"><img class="thumbnail" src="media/empire_thumbnail.png"></a>
                 <a href="nowait"><img class="thumbnail" src="media/nowait_thumbnail.png"></a>
                 <a href="constructed"><img class="thumbnail" src="media/constructed_thumbnail.png"></a>
