--- a/html/partial/header.html
+++ b/html/partial/header.html
@@ -1,5 +1,5 @@
 <div class="centered">
     <div class="header_footer" id="header">
-        <a href="home"><img src="media/logo.png" class="logo"></a>
+        <a href="landing"><img src="media/logo.png" class="logo"></a>
     </div>
 </div>
