working comments box

--- a/html/partial/footer.html
+++ b/html/partial/footer.html
@@ -68,6 +68,11 @@
             <input type="text" name="questions_email" id="questions_email" placeholder="Email (Optional)">
             <button id="questions_button" class="subscribe">Submit</button>
         </div>
+        <div id="questions_success_box" class="collapsed">
+            <p class="h2" id="questions_success_message">
+                Thanks! We'll get back to you ASAP.
+            </p>
+        </div>
 
         <!-- Divider -->
         <img src="media/divider.png" class="divider">
