--- a/html/partial/footer.html
+++ b/html/partial/footer.html
@@ -25,8 +25,8 @@
                 <a href="empire-text"><img class="thumbnail" src="media/empire_thumbnail.png"></a>
                 <a href="nowait-text"><img class="thumbnail" src="media/nowait_thumbnail.png"></a>
                 <a href="constructed-text"><img class="thumbnail" src="media/constructed_thumbnail.png"></a>
-                <a href="nowait-text"><img class="thumbnail" src="media/learn_thumbnail.png"></a>
-                <a href="constructed-text"><img class="thumbnail" src="media/comprehensive_thumbnail.png"></a>
+                <a rel="noreferrer noopener" target="_blank" href="docs/Learn to Play (Digital).pdf"><img class="thumbnail" src="media/learn_thumbnail.png"></a>
+                <a rel="noreferrer noopener" target="_blank" href="docs/Comprehensive Rules (Digital).pdf"><img class="thumbnail" src="media/comprehensive_thumbnail.png"></a>
             </div>
         </div>
 
