revamping for a more engaging narrative; using new file structure

--- a/html/partial/footer.html
+++ b/html/partial/footer.html
@@ -5,40 +5,40 @@
         <!-- Buttons -->
         <button id="video_button">Watch More Videos</button>
         <a href="online"><button>Play The Online Demo</button></a>
-        <button id="read_button">Read More</button>
+        <button id="read_button">Learn More</button>
         <button id="pnp_button">Print and Play</button>
 
         <!-- Video Thumbnails -->
         <div class="padding">
             <div class="collapsed" id="video_thumbnails">
-                <a href="landing"><img class="thumbnail" src="media/landing_thumbnail.png"></a>
-                <a href="empire"><img class="thumbnail" src="media/empire_thumbnail.png"></a>
-                <a href="nowait"><img class="thumbnail" src="media/nowait_thumbnail.png"></a>
-                <a href="constructed"><img class="thumbnail" src="media/constructed_thumbnail.png"></a>
+                <a href="landing"><img class="thumbnail" src="img/landing_thumbnail.png"></a>
+                <a href="empire"><img class="thumbnail" src="img/empire_thumbnail.png"></a>
+                <a href="nowait"><img class="thumbnail" src="img/nowait_thumbnail.png"></a>
+                <a href="constructed"><img class="thumbnail" src="img/constructed_thumbnail.png"></a>
             </div>
         </div>
 
         <!-- Reading Thumbnails -->
         <div class="padding">
             <div class="collapsed" id="read_thumbnails">
-                <a href="gameplay"><img class="thumbnail" src="media/gameplay_thumbnail.png"></a>
-                <a href="empire-text"><img class="thumbnail" src="media/empire_thumbnail.png"></a>
-                <a href="nowait-text"><img class="thumbnail" src="media/nowait_thumbnail.png"></a>
-                <a href="constructed-text"><img class="thumbnail" src="media/constructed_thumbnail.png"></a>
-                <a rel="noreferrer noopener" target="_blank" href="docs/Learn to Play (Digital).pdf"><img class="thumbnail" src="media/learn_thumbnail.png"></a>
-                <a rel="noreferrer noopener" target="_blank" href="docs/Comprehensive Rules (Digital).pdf"><img class="thumbnail" src="media/comprehensive_thumbnail.png"></a>
+                <a href="gameplay"><img class="thumbnail" src="img/gameplay_thumbnail.png"></a>
+                <a href="empire-text"><img class="thumbnail" src="img/empire_thumbnail.png"></a>
+                <a href="nowait-text"><img class="thumbnail" src="img/nowait_thumbnail.png"></a>
+                <a href="constructed-text"><img class="thumbnail" src="img/constructed_thumbnail.png"></a>
+                <a rel="noreferrer noopener" target="_blank" href="docs/Learn To Play Rulebook.pdf"><img class="thumbnail" src="img/learn_thumbnail.png"></a>
+                <a rel="noreferrer noopener" target="_blank" href="docs/Comprehensive Rulebook.pdf"><img class="thumbnail" src="img/comprehensive_thumbnail.png"></a>
             </div>
         </div>
 
         <!-- PnP -->
         <div class="padding">
             <div class="collapsed" id="pnp_thumbnails">
-                <a rel="noreferrer noopener" target="_blank" href="docs/Print Instructions.pdf"><img class="thumbnail" src="media/printing_thumbnail.png"></a>
-                <a rel="noreferrer noopener" target="_blank" href="docs/Elemental Cards.pdf"><img class="thumbnail" src="media/elemental_thumbnail.png"></a>
-                <a rel="noreferrer noopener" target="_blank" href="docs/Player Cards.pdf"><img class="thumbnail" src="media/player_thumbnail.png"></a>
-                <a rel="noreferrer noopener" target="_blank" href="docs/Subversions.pdf"><img class="thumbnail" src="media/subversions_thumbnail.png"></a>
-                <a rel="noreferrer noopener" target="_blank" href="docs/Learn to Play (Digital).pdf"><img class="thumbnail" src="media/learn_thumbnail.png"></a>
-                <a rel="noreferrer noopener" target="_blank" href="docs/Comprehensive Rules (Digital).pdf"><img class="thumbnail" src="media/comprehensive_thumbnail.png"></a>
+                <a rel="noreferrer noopener" target="_blank" href="docs/Print Instructions.pdf"><img class="thumbnail" src="img/printing_thumbnail.png"></a>
+                <a rel="noreferrer noopener" target="_blank" href="docs/Elemental Cards.pdf"><img class="thumbnail" src="img/elemental_thumbnail.png"></a>
+                <a rel="noreferrer noopener" target="_blank" href="docs/Player Cards.pdf"><img class="thumbnail" src="img/player_thumbnail.png"></a>
+                <a rel="noreferrer noopener" target="_blank" href="docs/Subversions.pdf"><img class="thumbnail" src="img/subversions_thumbnail.png"></a>
+                <a rel="noreferrer noopener" target="_blank" href="docs/Learn To Play Rulebook.pdf"><img class="thumbnail" src="img/learn_thumbnail.png"></a>
+                <a rel="noreferrer noopener" target="_blank" href="docs/Comprehensive Rulebook.pdf"><img class="thumbnail" src="img/comprehensive_thumbnail.png"></a>
             </div>
         </div>
 
@@ -75,7 +75,7 @@
         </div>
 
         <!-- Divider -->
-        <img src="media/divider.png" class="divider">
+        <img src="img/divider.png" class="divider">
 
         <!-- Credits -->
         <div class="centered credits">
