--- a/html/partial/include.html
+++ b/html/partial/include.html
@@ -1,5 +1,5 @@
 <!-- Favicon -->
-<link rel="icon" type="image/png" href="media/icon.png" />
+<link rel="icon" type="image/png" href="img/icon.png" />
 
 <!-- Fonts -->
 <link rel="preconnect" href="https://fonts.googleapis.com">
