--- a/style/media.css
+++ b/style/media.css
@@ -1,10 +1,14 @@
 :root {
-    --partial-img-width: 67%
+    --partial-img-width: 67%;
+    --mobile-full-width: 67%;
+    --full-margin: 25px;
 }
 
 @media (pointer:none), (pointer:coarse) {
     :root {
-        --partial-img-width: 100%
+        --partial-img-width: 100%;
+        --mobile-full-width: 100%;
+        --full-margin: 0px;
     }
 }
 
@@ -31,12 +35,16 @@ img.std, video.std {
     max-width: var(--max-width);
 }
 
-img.partial, img.full {
+img.partial, img.full, img.mobile_full {
     width: var(--partial-img-width);
     max-width: var(--max-width);
-    margin: 25px;
+    margin: var(--full-margin);
 }
 
 img.full {
     width: 95%;
+}
+
+img.mobile_full {
+    width: var(--mobile-full-width);
 }
