credits to creadfectus for assets

--- a/html/partial/footer.html
+++ b/html/partial/footer.html
@@ -93,6 +93,8 @@
                 <a href="https://www.deviantart.com/metalratrox/" class="link p2 bgcolor">Jos&eacute; Mu&ntilde;oz</a>,
                 <a href="https://www.deviantart.com/mr-ripley" class="link p2 bgcolor">Mr-Ripley</a>, and
                 <a href="https://www.deviantart.com/4steex" class="link p2 bgcolor">4steex</a>.
+                Box art, card backs, logo (isotype & logotype), and card frames by
+                <a href="https://www.deviantart.com/creadfectus" class="link p2 bgcolor">CREADFECTUS</a>.
                 Promo video music by
                 <a href="https://freemusicarchive.org/music/Komiku" class="link p2 bgcolor">Komiku</a>,
                 <a href="https://freesound.org/people/Airwolf89/" class="link p2 bgcolor">AirWolf89</a>,
