outsmarting google chrome's simplified reader mode; gameplay -> overview

--- a/html/partial/footer.html
+++ b/html/partial/footer.html
@@ -21,7 +21,7 @@
         <!-- Reading Thumbnails -->
         <div class="padding">
             <div class="collapsed" id="read_thumbnails">
-                <a href="gameplay"><img class="thumbnail" src="img/gameplay_thumbnail.png"></a>
+                <a href="overview"><img class="thumbnail" src="img/gameplay_thumbnail.png"></a>
                 <a href="empire-text"><img class="thumbnail" src="img/empire_thumbnail.png"></a>
                 <a href="nowait-text"><img class="thumbnail" src="img/nowait_thumbnail.png"></a>
                 <a href="constructed-text"><img class="thumbnail" src="img/constructed_thumbnail.png"></a>
